crates/frust-tui/tests/snapshots/snapshots__add_plugin_options_checkboxes_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS                │                                                                          
   none running          │                                                                          
                  ╭ Add plugin ───────────────────────────────────── [Esc] Close ╮                  
 ACTIONS          │                                                              │▓▓                
   New project · n│  Optional features  ·  secure-storage                        │▓▓                
   Add plugin · a │  ▸ [✓] biometric-gate                                        │▓▓                
   Doctor · d     │        Per-store Face ID / Touch ID / BiometricPrompt gate:  │▓▓                
   Build · b      │                                                              │▓▓                
   Clean · c      │   Back    Apply    Cancel                                    │▓▓                
   MCP off · M    │  ↑/↓ move · Space toggle · Enter apply · Esc back            │▓▓                
   DAP off · D    ╰──────────────────────────────────────────────────────────────╯▓▓                
                    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
