crates/frust-tui/tests/snapshots/snapshots__add_plugin_report_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS                │                                                                          
   none running   ╭ Add plugin ───────────────────────────────────── [Esc] Close ╮                  
                  │                                                              │▓▓                
 ACTIONS          │  ✓ Added secure-storage  ·  2 applied, 1 already present     │▓▓                
   New project · n│    ✓ Cargo.toml dependency `frust-secure-storage`            │▓▓                
   Add plugin · a │    ✓ AndroidManifest.xml permission `android.permission.USE  │▓▓                
   Doctor · d     │    • Info.plist key `NSFaceIDUsageDescription`               │▓▓                
   Build · b      │  See the plugin README for any remaining manual steps.       │▓▓                
   Clean · c      │                                                              │▓▓                
   MCP off · M    │   Back    Done    Cancel                                     │▓▓                
   DAP off · D    │  Enter/Esc close                                             │▓▓                
                  ╰──────────────────────────────────────────────────────────────╯▓▓                
                    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
