crates/frust-tui/tests/snapshots/snapshots__add_plugin_select_step_last_entry_scrolled_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: rendered
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS         ╭ Add plugin ───────────────────────────────────── [Esc] Close ╮                  
  ▸ huddle        │                                                              │▓▓                
                  │  Choose a plugin to add to this project  (10-18 of 18)       │▓▓                
 DEVICES ↻ R      │    ( ) oauth-native                                          │▓▓                
   none found     │        OAuth 2.0 native-app helper: PKCE (S256), state,      │▓▓                
                  │    ( ) iap                                                   │▓▓                
 SESSIONS         │        In-app purchases and subscriptions over Play Billing  │▓▓                
   none running   │    ( ) video-player                                          │▓▓                
                  │        Video playback (Media3 ExoPlayer / AVPlayer) with     │▓▓                
 ACTIONS          │    ( ) database                                              │▓▓                
   New project · n│        Embedded SQL database (SQLite via rusqlite;           │▓▓                
   Add plugin · a │    ( ) i18n                                                  │▓▓                
   Doctor · i     │        Fluent Project-based                                  │▓▓                
   Build · b      │    ( ) glyph                                                 │▓▓                
   Clean · c      │        Glyph catalog; needs frust_glyph::install() in app!   │▓▓                
   MCP off · M    │    ( ) material                                              │▓▓                
   DAP off · D    │        Material 3 catalog; needs frust_material::install()   │▓▓                
                  │    ( ) cupertino                                             │▓▓                
                  │        Cupertino catalog; needs frust_cupertino::install()   │▓▓                
                  │  ▸ (o) shadcn                                                │▓▓                
                  │        shadcn/ui catalog; needs frust_shadcn::install() in   │▓▓                
                  │                                                              │▓▓                
                  │   Back    Next    Cancel                                     │▓▓                
                  │  ↑/↓ choose · Enter next · Esc close                         │▓▓                
                  ╰──────────────────────────────────────────────────────────────╯▓▓                
                    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                
● ready  │  o run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
