crates/frust-tui/tests/snapshots/snapshots__bootstrap_wizard_green_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &bootstrap_state(all_green_report(), 0))"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ✓ toolchain                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
             ╭ ⚙ Toolchain setup — get this machine building Frust apps ✓ [Esc] Close ╮             
 DEVICES ↻ r │                                                                        │▓▓           
   none found│  STEPS                  Prerequisites — ok                             │▓▓           
             │  ▸✓ Rust toolchain      ✓ Rust toolchain  ok                           │▓▓           
 SESSIONS    │   ✓ Platforms ▾                                                        │▓▓           
   none runni│     ✓ Android                                                          │▓▓           
             │     ✓ Desktop                                                          │▓▓           
 ACTIONS     │   ✓ Doctor rollup                                                      │▓▓           
   New projec│                                                                        │▓▓           
   Add plugin│                                                                        │▓▓           
   Doctor · d│                                                                        │▓▓           
   Build · b │                                                                        │▓▓           
   Clean · c │                                                                        │▓▓           
   MCP off · │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │  ↑↓ steps · Space expand · Tab fix · Enter/r run · c copy · Esc close  │▓▓           
             ╰────────────────────────────────────────────────────────────────────────╯▓▓           
               ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓           
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
