crates/frust-tui/tests/snapshots/snapshots__bootstrap_wizard_missing_core_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &bootstrap_state(missing_core_report(), 0))"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ✗ missing                                       ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
             ╭ ⚙ Toolchain setup — get this machine building Frust apps ✗ [Esc] Close ╮             
 DEVICES ↻ r │                                                                        │▓▓           
   none found│  STEPS                  Prerequisites — missing                        │▓▓           
             │  ▸✗ Rust toolchain      ✗ Rust toolchain  not found                    │▓▓           
 SESSIONS    │   ! Platforms ▾                                                        │▓▓           
   none runni│     ! Android           FIX IT — one command per confirm               │▓▓           
             │     ✓ iOS               ▶ Install Rust via rustup                      │▓▓           
 ACTIONS     │     ✓ Desktop                                                          │▓▓           
   New projec│   ✗ Doctor rollup        ▶ Run in session    c copy                    │▓▓           
   Doctor · d│                                                                        │▓▓           
   Build · b │                                                                        │▓▓           
   Clean · c │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │                                                                        │▓▓           
             │  ↑↓ steps · Space expand · Tab fix · Enter/r run · c copy · Esc close  │▓▓           
             ╰────────────────────────────────────────────────────────────────────────╯▓▓           
               ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓           
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
