crates/frust-tui/tests/snapshots/snapshots__build_launcher_apk_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS          ╭ Build · huddle ────────────────────────────────────────────╮                   
   none running    │                                                            │▓▓                 
                   │  Kind     ‹ apk ›                                          │▓▓                 
 ACTIONS           │  Mode     ‹ release ›                                      │▓▓                 
   New project · n │  Flavor   paid                                             │▓▓                 
   Doctor · d      │  Defines  KEY=VALUE …                                      │▓▓                 
   Build · b       │  Split per ABI [x]                                         │▓▓                 
   Clean · c       │                                                            │▓▓                 
                   │   Build     Cancel                                         │▓▓                 
                   │  Space toggle · ←/→ cycle · Tab next · Enter build · Esc   │▓▓                 
                   │                                                            │▓▓                 
                   ╰────────────────────────────────────────────────────────────╯▓▓                 
                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                 
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
