crates/frust-tui/tests/snapshots/snapshots__clean_confirm_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ R             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS                │                                                                          
   none running          │                                                                          
                      ╭ Clean ───────────────────────────────────────────────╮                      
 ACTIONS              │                                                      │▓▓                    
   New project · n    │  Remove build output for huddle?                     │▓▓                    
   Add plugin · a     │  cargo clean · build/ · legacy: android/app/build ·  │▓▓                    
   Doctor · i         │                                                      │▓▓                    
   Build · b          │   Clean     Cancel                                   │▓▓                    
   Clean · c          │  Enter/y clean · Esc cancel                          │▓▓                    
   MCP off · M        ╰──────────────────────────────────────────────────────╯▓▓                    
   DAP off · D          ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                    
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  o run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
