crates/frust-tui/tests/snapshots/snapshots__context_menu_log_row_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │   12:00:00 [app]       Compiling huddle v0.1.0                           
                         │   12:00:01 [app]        Finished dev profile                             
 DEVICES ↻ r             │   12:00:02 [app]         Running `target/debug/huddle`                   
   none found            │   12:00:03 [app]    app: booting up                                      
                         │ W 12:00:04 [app]    warning: unused variable `x`                         
 SESSIONS                │   12:00:05 [app]    app: frame 1 rendered                                
   huddle           ╭────────────────────────╮ error: texture upload failed                         
   ▸ ▶ desktop      │▸ Copy line             │▓app: recovering                                      
                    │  Copy selection      y │▓                                                     
 ACTIONS            │  Select lines…       v │▓                                                     
   New project · n  │  Toggle follow-tail  f │▓                                                     
   Add plugin · a   │  Search logs…        / │▓                                                     
   Doctor · d       ╰────────────────────────╯▓                                                     
   Build · b         ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                                                     
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
● 1 running  │  r run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
