crates/frust-tui/tests/snapshots/snapshots__context_menu_session_tab_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
assertion_line: 1700
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │   12:00:00 [app]       Compiling huddle v0.1.0                           
                         │   12:00╭───────────────────────────╮ profile                             
 DEVICES ↻ r             │   12:00│▸ Select tab           1-9 │▓get/debug/huddle`                   
   none found            │   12:00│  Stop session           x │▓                                    
                         │ W 12:00│  Stop & close           X │▓ariable `x`                         
 SESSIONS                │   12:00│  Toggle follow-tail     f │▓ered                                
   huddle                │ E 12:00│  Copy artifact path(s)  c │▓load failed                         
   ▸ ▶ desktop           │   12:00╰───────────────────────────╯▓                                    
                         │         ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                                    
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
